@@ -1,19 +1,16 @@
 package fr.univ.bordeaux.ui.cli;
 
-import fr.univ.bordeaux.application.commands.network.*;
+import fr.univ.bordeaux.application.commands.ICmd;
 import fr.univ.bordeaux.ui.AbstractGameUI;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-
 import java.nio.charset.StandardCharsets;
-
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-
+import javax.annotation.Nonnull;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.CommandLineParser;
 import org.apache.commons.cli.DefaultParser;
@@ -49,11 +46,13 @@ public class AgonShell extends AbstractGameUI {
   private Terminal terminal;
   private LineReader reader;
   private PromptBuilder promptBuilder;
+
   /** represent all options available from the menu */
   private Options options = null;
 
   /** Message Header of the cli for the entire App */
   private final String msgHA;
+
   private final String mainMenuASCII;
 
   private ArrayList<String> cmdHistory;
@@ -93,48 +92,37 @@ public class AgonShell extends AbstractGameUI {
     registry.register("server list",  new CmdServerList(context));
   }
 
-  /**
-   * fill options for the cli
-   * (done once internally)
-   */
-  private void initOptions(){
+  /** fill options for the cli (done once internally) */
+  private void initOptions() {
     if (this.options != null) return; // done once
-    Option help = Option.builder("h")
-      .longOpt("help")
-      .optionalArg(true)
-      .hasArg()
-      .argName("cmd")
-      .desc("Show help (otpionally for a specific command")
-      .get();
+    Option help =
+        Option.builder("h")
+            .longOpt("help")
+            .optionalArg(true)
+            .hasArg()
+            .argName("cmd")
+            .desc("Show help (otpionally for a specific command")
+            .get();
     this.options = new Options();
     // display Shell help
     this.options.addOption("h", "help", false, "show help");
     // display command help
     this.options.addOption("h", "help", true, "show help command");
-
-
   }
 
-  public void test(){
+  public void test() {
     var a = new ConsoleRenderer(null);
     a.renderer();
-
   }
 
   @Override
-  public void updateBoard(String board) {
-
-  }
+  public void updateBoard(String board) {}
 
   @Override
-  public void showMessage(String message) {
-
-  }
+  public void showMessage(String message) {}
 
   @Override
-  public void showError(String error) {
-
-  }
+  public void showError(String error) {}
 
   @Override
   public boolean getUserConfirmation(String prompt) {
@@ -154,62 +142,59 @@ public class AgonShell extends AbstractGameUI {
     this.promptBuilder = prompt.getPromptBuilder();
 
     // Create a list prompt for single selection
-    this.promptBuilder.createListPrompt()
-     .name("color")
-     .message("Choose your favorite color")
-     .newItem()
-     .text("Red")
-     .add()
-     .newItem("green")
-     .text("Green")
-     .add()
-     .newItem("blue")
-     .text("Blue")
-     .add()
-     .newItem("yellow")
-     .text("Yellow")
-     .add()
-     .pageSize(3) // Show 3 items at a time
-     .addPrompt();
+    this.promptBuilder
+        .createListPrompt()
+        .name("color")
+        .message("Choose your favorite color")
+        .newItem()
+        .text("Red")
+        .add()
+        .newItem("green")
+        .text("Green")
+        .add()
+        .newItem("blue")
+        .text("Blue")
+        .add()
+        .newItem("yellow")
+        .text("Yellow")
+        .add()
+        .pageSize(3) // Show 3 items at a time
+        .addPrompt();
     try {
       Map<String, PromptResultItemIF> result = prompt.prompt(this.promptBuilder.build());
       System.out.println("Selected color: " + result.get("color").getResult());
       Thread.sleep(1000);
     } catch (Exception e) {
-      this.cliErr("exception type: "+e.getClass());
+      this.cliErr("exception type: " + e.getClass());
       this.cliErr(e.getMessage());
     }
   }
 
-  private void safeCloseTerminal(){
+  private void safeCloseTerminal() {
     try {
       this.terminal.close();
-    } catch (IOException e){
+    } catch (IOException e) {
       this.cliErr("error closing terminal");
       this.cliErr(e.getMessage());
     }
   }
 
-  /**
-   * load menu character in a variable
-   * once
-   */
+  /** load menu character in a variable once */
   @Nonnull
-  private String loadMainMenu(){ // DP Command here
+  private String loadMainMenu() { // DP Command here
     final String defaultMenu = "Menu not available";
     final String shellMenuTxtFile = "cmdsInformations/agonShellMenu.txt";
-    final String resourcePath = "/"+ shellMenuTxtFile;
+    final String resourcePath = "/" + shellMenuTxtFile;
     InputStream is = getClass().getResourceAsStream(resourcePath);
     if (is == null) return defaultMenu;
-    try (BufferedReader reader = new BufferedReader(
-       new InputStreamReader(is, StandardCharsets.UTF_8)
-      )) {
-        var menu = new StringBuilder();
-        String line;
-        while ((line = reader.readLine()) != null) {
-          menu.append(line).append("\n");
-        }
-        return menu.toString();
+    try (BufferedReader reader =
+        new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))) {
+      var menu = new StringBuilder();
+      String line;
+      while ((line = reader.readLine()) != null) {
+        menu.append(line).append("\n");
+      }
+      return menu.toString();
     } catch (IOException | NullPointerException e) {
       // if the file doesn't exist
       this.cliErr("when reading menu : " + e.getMessage());
@@ -220,49 +205,31 @@ public class AgonShell extends AbstractGameUI {
   /**
    * run the program to interact with the user
    */
-  public void loop() {
+  public void loop(){
+    //this.showMainMenu();
+    int startCursorIdx = 0;
     this.cliW(this.mainMenuASCII);
-
+    String line;
+    List<String> words;
     while (this.running) {
-      String line = this.reader.readLine(">> ");
-      if (line == null || line.trim().isEmpty()) continue;
-
-      ParsedLine parsed = reader.getParser().parse(line, 0);
-      List<String> words = parsed.words();
-      if (words.isEmpty()) continue;
-
-      // --- NEW: support "server start|stop|list ..." ---
-      if (words.size() >= 2 && "server".equalsIgnoreCase(words.get(0))) {
-        // command name becomes: "server start" / "server stop" / "server list"
-        this.userCmdName = "server " + words.get(1).toLowerCase();
-
-        // args are after the 2 words
-        if (words.size() > 2) {
-          this.userOptions = words.subList(2, words.size()).toArray(new String[0]);
-        } else {
-          this.userOptions = new String[0];
-        }
-      } else {
-        // default: single-word commands like ping, join, quit...
-        this.userCmdName = words.get(0).toLowerCase();
-
-        if (words.size() > 1) {
-          this.userOptions = words.subList(1, words.size()).toArray(new String[0]);
-        } else {
-          this.userOptions = new String[0];
-        }
-      }
-
+      line = this.reader.readLine(">> ");
+      // tokenized by JLine into words
+      ParsedLine parsed = reader.getParser().parse(line, startCursorIdx);
+      words = parsed.words();
+      this.userCmdName = words.getFirst(); // == word.get(0);
+      startCursorIdx++;
+      // in options, we must get only options not the command name included
+      this.userOptions = words.subList(startCursorIdx, words.size())
+        .toArray(new String[0]);
       this.running = this.conditionalReturning();
     }
-
     this.cliWln("Bye !");
     this.safeCloseTerminal();
   }
 
-
   /**
    * check if the user want to exit or not
+   *
    * @return boolean : false if the user want to exit, true otherwise
    */
   private boolean conditionalReturning(){ // Locked Here need work from the others
@@ -308,7 +275,7 @@ public class AgonShell extends AbstractGameUI {
     return true;
   }
 
-  private void cliActOnOptions(){
+  private void cliActOnOptions() {
     CommandLineParser parser = new DefaultParser();
     try {
       CommandLine cmdl = parser.parse(options, this.userOptions);
@@ -318,65 +285,55 @@ public class AgonShell extends AbstractGameUI {
       }
     } catch (Exception e) {
       this.cliWln("Invalid Command");
-//      new HelpFormatter().printHelp("load", options);
+      //      new HelpFormatter().printHelp("load", options);
     }
   }
 
   /**
-   * format the output error to see where is the problem
-   * (following maven style)
+   * format the output error to see where is the problem (following maven style)
+   *
    * @param msg add a message to the error
    */
-  private void cliErr(String msg){
+  private void cliErr(String msg) {
     final String tag = "ERROR";
     AttributedStringBuilder asb = new AttributedStringBuilder();
-    asb.append(this.msgHA)
-     .append("[");
-    asb.style(AttributedStyle.BOLD.foreground(AttributedStyle.RED))
-     .append(tag);
-    asb.style(AttributedStyle.DEFAULT)
-     .append("] ")
-     .append(msg);
+    asb.append(this.msgHA).append("[");
+    asb.style(AttributedStyle.BOLD.foreground(AttributedStyle.RED)).append(tag);
+    asb.style(AttributedStyle.DEFAULT).append("] ").append(msg);
     this.cliWln(asb.toAnsi());
   }
 
   /**
-   * create the first bloc to know that we are in
-   * agon game to make a difference with maven messages
+   * create the first bloc to know that we are in agon game to make a difference with maven messages
    * (must be used once in the constructor to set attr)
    */
-  private String cliLayer(){
+  private String cliLayer() {
     final String tag = "AGON";
     AttributedStringBuilder asb = new AttributedStringBuilder();
-    asb.style(AttributedStyle.DEFAULT)
-     .append("[");
-    asb.style(AttributedStyle.BOLD.foreground(AttributedStyle.MAGENTA))
-     .append(tag);
-    asb.style(AttributedStyle.DEFAULT)
-     .append("]");
+    asb.style(AttributedStyle.DEFAULT).append("[");
+    asb.style(AttributedStyle.BOLD.foreground(AttributedStyle.MAGENTA)).append(tag);
+    asb.style(AttributedStyle.DEFAULT).append("]");
     return asb.toAnsi();
   }
 
-
   /**
-   * show a message in terminal using JLine
-   * shortened the code verbose (because used many
-   * times and must be changed once for all)
+   * show a message in terminal using JLine shortened the code verbose (because used many times and
+   * must be changed once for all)
+   *
    * @param msg message to send in terminal
    */
-  private void cliWln(String msg){
+  private void cliWln(String msg) {
     this.terminal.writer().println(msg);
     terminal.flush();
   }
 
   /**
-   * show a message in terminal using JLine
-   * display inline without jump line ("\n")
+   * show a message in terminal using JLine display inline without jump line ("\n")
+   *
    * @param msg message to send in terminal
    */
-  private void cliW(String msg){
+  private void cliW(String msg) {
     this.terminal.writer().print(msg);
     terminal.flush();
   }
-
 }
